# computer_graphics_2020

./: .gitignore  readme.md  util.sh
PA0.RasterGraphics/code/include/: element.hpp
PA1.RayCasting/code/: release.sh
PA1.RayCasting/code/include/: camera.hpp  group.hpp  material.hpp  object3d.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA1.RayCasting/code/src/: mesh.cpp
PA2.OpenGL/code/include/: object3d.hpp  plane.hpp  triangle.hpp
PA2.OpenGL/code/testcases/: scene01_basic.txt
PA3.BezierSurface/code/: debug.sh
PA3.BezierSurface/code/include/: a.out  curve.hpp  object3d.hpp  test.cpp
PA3.BezierSurface/code/src/: main.cpp
PA3.BezierSurface/ref/: basis.py
PA4.Jittor/: cgan.py  pa4.report.md
final.RayTracing/: readme.md
final.RayTracing/code/: CMakeLists.txt  debug.sh  run_all.sh  smallpt.cpp
final.RayTracing/code/include/: camera.hpp  curve.hpp  group.hpp  helpers.hpp  image.hpp  light.hpp  material.hpp  material_bak.hpp  mesh.hpp  object3d.hpp  plane.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  triangle.hpp
final.RayTracing/code/src/: aabb.hpp  camera.cpp  camera.hpp  common.hpp  curve.hpp  group.hpp  helpers.hpp  image.hpp  light.hpp  main  main.cpp  makefile  mat44.hpp  mesh.cpp  mesh.hpp  object3d.hpp  ray_tracer.hpp  revsurface.hpp  scene_parser.cpp  scene_parser.hpp  scenes.hpp  vec.hpp
final.RayTracing/code/testcases/: scene00_naive.txt  scene01_basic.txt  scene04_axes.txt
pa1/: report.tex
pa1/student-code/include/: camera.hpp  group.hpp  hit.hpp  material.hpp  object3d.hpp  plane.hpp  ray.hpp  sphere.hpp  transform.hpp  (+1 more)
(+9 files in other folders)
